// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton BorderlessButton should render 1`] = `
<button
  className="ant-btn StyledButton__InlineFlexButton-rhr4ab-0 StyledButton__BorderlessButton-rhr4ab-2 shpcx"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton DownloadButton should render 1`] = `
<button
  className="ant-btn StyledButton__InlineFlexButton-rhr4ab-0 StyledButton__RoundedButton-rhr4ab-1 StyledButton__DownloadButton-rhr4ab-5 bUQZgZ"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton DropDownButton should render 1`] = `
<button
  className="ant-btn StyledButton__InlineFlexButton-rhr4ab-0 StyledButton__RoundedButton-rhr4ab-1 StyledButton__DropDownButton-rhr4ab-8 kfgWAb"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton GithubButton should render 1`] = `
<button
  className="ant-btn StyledButton__InlineFlexButton-rhr4ab-0 StyledButton__RoundedButton-rhr4ab-1 StyledButton__GithubButton-rhr4ab-3 VjEaJ"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton LineButton should render 1`] = `
<button
  className="ant-btn StyledButton__InlineFlexButton-rhr4ab-0 StyledButton__RoundedButton-rhr4ab-1 StyledButton__LineButton-rhr4ab-7 cTpTpT"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton RoundedButton should render 1`] = `
<button
  className="ant-btn StyledButton__InlineFlexButton-rhr4ab-0 StyledButton__RoundedButton-rhr4ab-1 itGAiA"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton SmDownloadButton should render 1`] = `
<button
  className="ant-btn StyledButton__InlineFlexButton-rhr4ab-0 StyledButton__BorderlessButton-rhr4ab-2 StyledButton__SmDownloadButton-rhr4ab-4 hTflzd"
  onClick={[Function]}
  type="button"
/>
`;
